<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingBottom="48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="@dimen/profile_pic"
                            android:layout_height="@dimen/profile_pic"
                            android:padding="8dp"
                            android:src="@drawable/face"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/tertiary_text"
                                android:textSize="@dimen/nf_title"
                                android:textStyle="bold"
                                />

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text"
                                android:textSize="@dimen/content_author_name"/>

                            <TextView
                                android:id="@+id/email_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/hint_text"
                                android:textSize="@dimen/nf_timestamp"/>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="240dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/separator"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/tertiary_text"
                            android:textSize="@dimen/institute_details"
                            android:textStyle="bold"
                            />

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <View
                            android:layout_width="240dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:background="@color/separator"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_account_circle_white_48dp"
                        android:tint="@color/primary_dark_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/tertiary_text"
                            android:textSize="@dimen/institute_details"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/email_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <View
                            android:layout_width="240dp"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:background="@color/separator"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_web_white_48dp"
                        android:tint="@color/primary_dark_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/college"
                            android:textColor="@color/tertiary_text"
                            android:textSize="@dimen/institute_details"
                            android:textStyle="bold"
                            />

                        <Spinner
                            android:id="@+id/college_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_location_city_white_48dp"
                        android:tint="@color/primary_dark_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/designation"
                            android:textColor="@color/tertiary_text"
                            android:textSize="@dimen/institute_details"
                            android:textStyle="bold"
                            />

                        <EditText
                            android:id="@+id/designation_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_designation"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <EditText
                            android:id="@+id/designation_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_designation"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <EditText
                            android:id="@+id/designation_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_designation"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />

                        <EditText
                            android:id="@+id/designation_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_designation"
                            android:textColor="@color/hint_text"
                            android:textSize="@dimen/institute_details"
                            />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_location_city_white_48dp"
                        android:tint="@color/primary_dark_color"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sign_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="Sign Out"
                        android:textAllCaps="true"
                        android:textColor="@color/hint_text"
                        android:textSize="18dp"/>


                    <View
                        android:layout_width="240dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="@color/separator"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_48dp"
        app:borderWidth="0dp"
        />
</RelativeLayout>